force-app/main/default/objects/GSquareArenaTvMetric__mdt/GSquareArenaTvMetric__mdt.object-meta.xml
<CustomObject>
    <description>Optional declarative override for GSquareSalesArenaWrapperWallTV_V2&apos;s hardcoded metric defaults. Lets an admin remap a Salesforce field from Setup with NO code deployment. Empty by default -- the app works fully without any records here.</description>
    <label>GSquare Arena TV Metric</label>
    <pluralLabel>GSquare Arena TV Metrics</pluralLabel>
</CustomObject>