force-app/main/default/objects/GSquareArenaTvMetric__mdt/fields/Divisor__c.field-meta.xml
<CustomField>
    <fullName>Divisor__c</fullName>
    <label>Divisor</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>