force-app/main/default/objects/GSquareArenaTvMetric__mdt/fields/Extra_Filter__c.field-meta.xml
<CustomField>
    <fullName>Extra_Filter__c</fullName>
    <description>Pipe-separated safe conditions only, e.g. &quot;Amount__c &gt;= 5000|Stage__c != &apos;Lost&apos;&quot;. Validated at query time, never raw SOQL. See GSquareSalesArenaServiceWallTV_V2.buildSafeExtraFilters().</description>
    <label>Extra Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>