force-app/main/default/objects/GSquareArenaTvMetric__mdt/fields/Metric_Key__c.field-meta.xml
<CustomField>
    <fullName>Metric_Key__c</fullName>
    <label>Metric Key</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>