force-app/main/default/objects/GSquareArenaTvMetric__mdt/fields/Numerator_Key__c.field-meta.xml
<CustomField>
    <fullName>Numerator_Key__c</fullName>
    <label>Numerator Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>