force-app/main/default/objects/GSquareArenaTvMetric__mdt/fields/Owner_Field_Alt__c.field-meta.xml
<CustomField>
    <fullName>Owner_Field_Alt__c</fullName>
    <label>Owner Field Fallback</label>
    <length>80</length>
    <type>Text</type>
</CustomField>