force-app/main/default/objects/GSquareArenaTvMetric__mdt/fields/Owner_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Owner_Field_API__c</fullName>
    <label>Owner Field API</label>
    <length>80</length>
    <type>Text</type>
</CustomField>