force-app/main/default/objects/GSquareArenaTvMetric__mdt/fields/Status_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Status_Field_API__c</fullName>
    <label>Status Field API</label>
    <length>80</length>
    <type>Text</type>
</CustomField>